Member Page Completed

--- a/include/base.scss
+++ b/include/base.scss
@@ -96,7 +96,7 @@ a.lnkUyeOlmak,
 
 // container
 
-.ems-container {width: 100%; max-width: 1200px; padding-left: 20px; padding-right: 20px; margin-left: auto; margin-right: auto; box-sizing: border-box;
+.ems-container {width: 100%; max-width: 1240px; padding-left: 20px; padding-right: 20px; margin-left: auto; margin-right: auto; box-sizing: border-box;
 
     &::before,
     &::after {clear: both;}
@@ -114,6 +114,8 @@ textarea,
 
 input:not([type=radio]):not([type=checkbox]),
 select {height: 50px;}
+
+[id$='plhMesajTuru1'] select {width: 100% $i;}
 
 textarea {height: 150px; padding-top: 15px; resize: none;}
 
@@ -155,7 +157,7 @@ textarea {height: 150px; padding-top: 15px; resize: none;}
 
 }
 
-.sStylerWrp_select {display: block; height: 50px; padding: 0px; position: relative;
+.sStylerWrp_select {display: block; height: 50px; padding: 0px; position: relative; font-size: 15px;
 
     .sStylerWrp {pointer-events: none; position: absolute; height: 100%; line-height: 50px; left: 10px;}
 
@@ -179,7 +181,15 @@ textarea {height: 150px; padding-top: 15px; resize: none;}
 
     .ems-field:not(.captcha) {
     
-        .ems-form-label {font-size: 14px; position: absolute; top: calc(50% - 10px); left: 12px; z-index: 1; transition: all .2s ease-in-out; pointer-events: none;}
+        .ems-form-label {font-size: 14px; position: absolute; top: calc(50% - 10px); left: 12px; z-index: 1; transition: all .2s ease-in-out; pointer-events: none;
+        
+            .zorunluFont {
+
+                &::before {content: '*';}
+
+            }
+        
+        }
 
         &.is-completed {
 
