--- a/include/base.scss
+++ b/include/base.scss
@@ -27,6 +27,8 @@ ul {list-style: none; padding-left: 0px;}
 
 .box-sizing-none {box-sizing: border-box;}
 
+#ui-datepicker-div {display: none;}
+
 // align
 
 .text-center {text-align: center;}
