--- a/include/cart.scss
+++ b/include/cart.scss
@@ -17,8 +17,6 @@
 
         .ems-grid-row {border-right-width: 1px;}
 
-        .ems-grid-img {}
-
     }
 
     .cart-header-wrapper {border-bottom: 1px solid $color-4; padding-bottom: 30px;}
@@ -29,7 +27,7 @@
 
             > span {display: block; text-align: center $i;
             
-                &.tabBtnSelectedSepet {color: $color-2;}
+                &.tabBtnSelectedDefault {color: $color-2;} 
             
             }
 
@@ -67,18 +65,19 @@
     
     }
 
-    .tabBtnAdimTeslimat {
+    .tabBtnAdimTeslimat,
+    .tabBtnSelectedTeslimat {
 
         &::before,
         &::after {content: ""; position: absolute; top: 40%; max-width: calc(39% - (50px / 2)); border-bottom: 3px solid $color-5;}
 
         &::before {right: calc(50% + (50px / 2)); width: 100%;}
 
-        &::after {left: calc(50% + (50px / 2)); width: 100%;}
+        &::after {left: calc(50% + (50px / 2)); width: 100%;} 
 
     }
 
-    .system-widget {max-width: 1200px; width: 100%;}
+    .system-widget {max-width: 1240px; width: 100%; padding-left: 20px; padding-right: 20px; box-sizing: border-box;}
 
     .pay-type-list {background-color: $color-4; color: $color-2; padding: 35px 120px;} 
 
@@ -147,10 +146,31 @@
         .pnlDipToplamTable .pnlDipToplam_sipToplam th,
         .pnlDipToplamTable .pnlDipToplam_sipToplam td {padding-bottom: 20px;}
 
-        .row-2 {padding-top:50px;}
-    }
+        .row-2 {padding-top: 50px;}
 
-    .row-1 {border-bottom: 1px solid;}
+        .ems-page-order-delivery {
+
+            .page-top-title {font-size: 18px; font-weight: bold;}
+
+            .add-new-address {
+
+                a {color: $color-2;
+                
+                    span {display: flex; font-size: 15px;}
+                
+                }
+
+            }
+
+            .ems-grid-address {
+
+                .ems-address-name {color: $color-2;}
+
+            }
+
+        }
+
+    }
 
     .row-2 {width: calc(100% - 335px); padding-right: 30px; position: relative; padding-top: 24px; 
 
@@ -164,13 +184,7 @@
     .cart-section-right {display: none; position: relative;
 
         &-append .cart-section-right {display: block;}
-    }
 
-    .page-top-title, .page-top-desc {display: none;}
-    
-    .page-top-title {display: block;
-
-        span {font-size: 18px; display: inline-block; padding-bottom: 15px; letter-spacing: 2px;}
     }
     
     .no-prd {text-align: center; margin: 100px auto;
@@ -322,7 +336,7 @@
 
         > span {border-top: 1px solid $color-2; font-weight: 600; position: relative; display: block; cursor: pointer; font-size: 12px; padding-top: 10px;
             
-            i {right: 0px; top: 50%; width: 12px; height: 12px; margin-top: -1px;}
+            i {right: 0px; width: 12px; height: 12px; margin-top: -1px;}
 
         }
 
@@ -330,7 +344,7 @@
             
             input {width: 100% !important; padding-right: 50px; height: 40px;}
             
-            table {display: table !important; position: absolute; right: 0px; top: calc(50% - 12px);
+            table {display: table !important; position: absolute; right: 0px; top: 7px;
                 
                 a.btnHediyeCekiKullan {
                     
@@ -341,6 +355,8 @@
             }
             
             .ems-message {margin-top: 5px;}
+
+            span[id$='lblHCK_HATA'] {font-size: 13px;}
         
         }
 
@@ -381,168 +397,88 @@
             }
         }
 
-        .add-new-address, .same-address {
-            display: inline-block;
-            vertical-align: middle;
-            width: 50%;
-        }
-        .add-new-address {
-            text-align: right;
-            position: absolute;
-            top: -12px;
-            right: 0;
-            a.btnDefault {
-                font-size: 14px;
-                background: none;
-                padding: 10px 0 10px 15px;
-                line-height: 18px;
-                span{
-                    font-size: 14px;
-                    letter-spacing: inherit;
-                    &:before{
-                        display:inline-block;
-                        content:'+';
-                        font-size:20px;
-                        margin-right:3px;
-                    }
-                }
-            }
-        }
-        .same-address {
-            width: 100%;
-            text-align: left;
-            font-size: 12px;
-            display: none !important;
-            .dvFarkliFatAdrSec { padding-top: 10px; }
-            div > span { vertical-align: middle; line-height: 25px; }
-            span.cStyler {
-                cursor: pointer;
-                width: 37px;
-                height: 20px;
-                border-radius: 23px;
-                background-color: #979797;
-                border: none;
-                position: relative;
-                padding: 1px;
-                &:before{
-                    content: '';
-                    position: absolute;
-                    top: 2px;
-                    left: 2px;
-                    height: 16px;
-                    width: 16px;
-                    border-radius: 100%;
-                    background: #ffffff;
-                }
-            }
-            span.cStyler.checked {
+        .add-new-address,
+        .same-address {display: inline-block; vertical-align: middle; width: 50%;}
+        
+        .add-new-address {text-align: right; position: absolute; top: -12px; right: 0px;
+            
+            a.btnDefault {font-size: 14px; background: none; padding: 10px 0 10px 15px; line-height: 18px;
                 
-                &:before{
-                    left: 19px;
+                span {font-size: 14px; letter-spacing: inherit;
+                    
+                    &::before {display:inline-block; content:'+'; font-size:20px; margin-right:3px;}
+                
                 }
+            
             }
+        
         }
-        .ems-delivery-tab {
-            margin-top: 20px;
-            .ems-delivery-tab-header {
-                
-                font-size: 18px;
-                
-                padding: 20px 0 15px 0;
-                margin: 0;
+
+        .same-address {width: 100%; text-align: left; font-size: 12px;
+            
+            .dvFarkliFatAdrSec {display: flex; font-weight: bold; color: $color-9;
+            
+                .sStylerMainWrp {margin-right: 12px;}
+            
             }
+            
+        }
+
+        .ems-delivery-tab {margin-bottom: 165px;
+            
+            .ems-delivery-tab-header {font-size: 18px; padding: 20px 0px 15px 0px; margin: 0px;}
+
             &.ems-cargo-tab {
+
                 .divTeslimatKargo {
-                    > ul {
-                        > li {
-                            position: relative;
-                            display: inline-block;
-                            vertical-align: middle;
-                            text-align: center;
-                            border: 1px solid;
-                            margin-left: 20px;
-                            padding: 80px 20px 20px 20px;
-                            font-size: 12px;
-                            min-width: 110px;
-                            max-width: 110px;
-                            &:first-child {
-                                margin-left: 0;
-                            }
-                            > img {
-                                position: absolute;
-                                left: 0;
-                                right: 0;
-                                top: 20px;
-                                margin: 0 auto;
-                                max-width: 75px;
-                            }
-                            > span {
-                                display: block;
-                                
-                                font-size: 12px;
-                                padding-top: 5px;
-                                
-                            }
-                            .kargoBilgi {
-                                display: none;
-                            }
-                            input {
-                                margin: 10px 0 0;
-                            }
+
+                    > ul {margin: 0px; display: flex;
+
+                        > li {display: flex; flex-direction: column; justify-content: space-between; align-items: center; position: relative; text-align: center; border: 1px solid $color-4; margin-left: 20px; padding: 10px; font-size: 12px; min-width: 110px; max-width: 110px;
+                            
+                            &:first-child {margin-left: 0px;}
+
+                            > img {display: none;}
+
+                            > span {display: block; font-size: 12px; padding-top: 5px;}
+                            
+                            .kargoBilgi {display: none;}
+                            
+                            input {margin: 10px 0px 0px;}
+                        
                         }
+                    
                     }
+                
                 }
+            
             }
+        
         }
+    
     }
 
-    .ems-page-new-address{
-        max-width: 780px;
-        width: 100%;
-        margin: 0 auto;
-        .page-top-title { 
-            text-align: center;
-            padding-bottom: 35px;
-            > span{
-                padding-top: 20px;
-                
-                font-size: 18px;
-            } 
-        }
-        .ems-form {
-            margin: 0 auto;
-            max-width: 375px;
-            &-inner{
+    .ems-page-new-address {
+       
+        .page-top-title {margin-bottom: 15px; font-size: 18px; font-weight: bold;}
+
+        .ems-form {margin: 0 auto; max-width: 375px;
+            
+            &-inner {
+
                 .ems-field {
-                    .ems-form-label{
-                        font-size: 12px;
-                        color: #888;
-                        line-height: 12px;
-                    }
-                    .ems-form-obj input, .ems-form-obj textarea{
-                        text-transform: uppercase;
-                        
-                        color: #000;
-                        font-size: 14px;
-                    }
+
+                    .ems-form-label {font-size: 12px; color: #888; line-height: 12px;}
+                    
+                    .ems-form-obj input,
+                    .ems-form-obj textarea {text-transform: uppercase; color: #000; font-size: 14px;}
+                    
                     .sStylerMainWrp.sStylerWrp_select{
                         .sStylerWrp{
                             text-transform: uppercase;
                             
                             color: #000;
                             font-size: 14px;
-                        }
-                    }
-                    &.is-completed{
-                        .sStylerMainWrp.sStylerWrp_select{
-                            .sStylerWrp{ height:60px; line-height:30px; }
-                        }
-                    }
-                    &.tcCheck {
-                        .ems-form-label{
-                            font-size:inherit;
-                            color:#888;
-                            line-height:inherit;
                         }
                     }
                 }
@@ -552,144 +488,103 @@
     }
 
     .ems-page-order-payment {
-        .obj-step0 {
-            display: block;
-            padding-top: 40px;
-            .ems-grid-row{
-                .ems-grid-gift-box{ display: none; }
+
+        .page-top-title {font-size: 18px; font-weight: bold;}
+
+        .obj-step0 {display: block; padding-top: 40px;
+
+            .ems-grid-row {
+
+                .ems-grid-gift-box {display: none;}
+
             }
+
         }
-        .ems-page-order-cart{
-            .page-top-title{
-                &:before{
-                    content:'SİPARİŞ ÖZETİ';
-                    display: block;
-                    padding-top: 40px;
-                    
-                    letter-spacing: 1.5px;
-                }
+
+        .ems-page-order-cart {
+
+            .page-top-title {
+
+                &::before {content:'SİPARİŞ ÖZETİ'; display: block; padding-top: 40px; letter-spacing: 1.5px;}
+            
             }
+        
         }
-        .ems-cart-button {
-            display: none;
-        }
+        
+        .ems-cart-button {display: none;}
+        
         .ems-cart-pay-tab {
-            ul {
-                display: table;
-                width: 100%;
-                table-layout: fixed;
+            
+            ul {display: flex;
+                
                 li {
-                    display: table-cell;
-                    vertical-align: middle;
-                    a {
-                        display: block;
-                        padding: 15px 5px;
-                        text-align: center;
-                       
-                        font-size: 15px;
+                    
+                    a {color: $color-2; padding: 15px 30px; text-align: center; font-size: 15px; line-height: 1; text-transform: uppercase; letter-spacing: 1.5px;
                         
-                        line-height:1;
-                        border-bottom:3px solid #ffffff;
-                        text-transform:uppercase;
-                        letter-spacing:1.5px;
-                        &.emos_selected {
-                            
-                           
-                            border-bottom: 3px solid;
-                        }
+                        &.emos_selected {font-weight: bold;}
+                    
                     }
+
+                    &:first-child {
+
+                        a {padding-left: 0px;}
+
+                    }
+                
                 }
+            
             }
+        
         }
-        .ems-cart-pay-adress {
-            margin-top: 45px;
-            .left, .right {
-                display: inline-block;
-                width: 49%;
-                vertical-align: top;
-            }
+
+        .ems-cart-pay-adress {margin-top: 45px;
+            
+            .left,
+            .right {display: inline-block; width: 49%; vertical-align: top;}
+            
             .ems-delivery-address {
-                &-lbl{
-                    
-                    font-size: 18px;
-                    
-                    padding-bottom: 20px;
-                    letter-spacing:1.5px; 
-                }
-                &-obj{
-                    min-height: 100px;
-                    max-height: 100px;
-                    overflow: hidden;
-                   
-                    font-size: 12px;
-                    padding:25px 30px;
-                    border: 1px solid;
-                }
+                
+                &-lbl {font-size: 18px; padding-bottom: 20px; letter-spacing: 1.5px;}
+                
+                &-obj {min-height: 100px; max-height: 100px; overflow: hidden; font-size: 12px; padding: 25px 30px; border: 1px solid;}
+            
             }
+        
         }
-        .ems-cart-pay-type {
-            position: relative;
-            .tableTitleDefault {
-                display: none;
-            }
+        
+        .ems-cart-pay-type {position: relative;
+            
+            .tableTitleDefault {display: none;}
+            
             .ems-pay-credit-cart {
-                div[id$="pnlKrediKartiBilgi"] { border:1px solid; }
-                .pageOdemeBilgi_chkBankaBonus {
-                    padding: 20px;
-                    border-top: 1px solid;
-                }
+                
+                div[id$="pnlKrediKartiBilgi"] {border:1px solid; display: flex;}
+
+                .pageOdemeBilgi_chkBankaBonus {padding: 20px; border-top: 1px solid;}
+            
             }
             
-            .tableOdemeBilgiKrediKarti {
-                display: inline-block;
-                vertical-align: top;
-                width: 50%;
-                padding-top: 20px;
-                padding-bottom: 20px;
-                border-right: 1px solid;
-                .sStylerMainWrp.sStylerWrp_select .sStylerWrp {
-                    padding-top: 15px;
-                    height: 50px;
-                    line-height: 22px;
+            .tableOdemeBilgiKrediKarti {width: 50%; padding: 30px; border-right: 1px solid $color-4;
+                
+                .sStylerMainWrp.sStylerWrp_select .sStylerWrp {padding-top: 15px; height: 50px; line-height: 22px; font-size: 14px; background: $color-5;
                     
-                    font-size: 14px;
-                    background:#f7f7f7;
-                    &:after{
-                        content:'\e904';
-                        font-size: 10px;
-                        color: #000;
-                        
-                    }
+                    &::after {content:''; font-size: 10px; color: $color-2;}
+                
                 }
-                tbody, tr { display: block; width: 100%; }
-                th {
-                    display: block;
-                    text-align: left;
-                   
-                    font-size: 11px;
-                    color: #9e9e9e;
-                    font-weight: normal;
-                    padding-bottom: 10px;
-                    padding-left: 20px;
-                    padding-right: 20px;
-                }
-                th:empty {
-                    display: none;
-                }
-                td {
-                    display: block;
-                    width: 100%;
-                    padding-left: 20px;
-                    padding-right: 20px;
-                    padding-bottom: 20px;
-                    input {
-                        width: 100% !important;
-                        
-                    }
-                    select {
-                        
-                        font-size: 14px;
-                    }
+                
+                tbody,
+                tr { display: block; width: 100%; }
+                
+                th {display: block; text-align: left; font-size: 11px; color: #9e9e9e; font-weight: normal;}
+
+                th:empty {display: none;}
+                
+                td {display: block; width: 100%;
+                    
+                    input {width: 100% !important;}
+                    
+                    select {font-size: 14px;}
+                    
                     &.tableOdemeBilgiKrediKarti_tddrpKSA_SPR_ID {
                         select {
                             width: 100% !important;
@@ -1198,6 +1093,21 @@
     }
 }
 
+// cart page new address
+
+.cart-page-new-address-body {
+
+    .page-cart.step1 {
+
+        .row-2 {width: 100%; padding-right: 0px;}
+
+
+        .row-3 {display: none;}
+
+    }
+
+}
+
 .sip-sonuc-3d {
     .page-cart {
         .bottom-step {
@@ -1214,25 +1124,30 @@
 }
 
 .cart-step-result {
-    .page-cart .row-1, .page-cart .row-3  {display: none !important;}
+
+    .page-cart .row-1,
+    .page-cart .row-3  {display: none !important;}
+
 }
-.odeme3d {
-    display:none;
-} 
+
+.odeme3d {display: none;}
+
 .ems-page-order-payment {
-    .pageSiparisOnay_garanriSozlesme {
-        display: none;
-    }
+
+    .pageSiparisOnay_garanriSozlesme {display: none;}
+
 }
+
 .pageCreditCart .odeme3d {
     display:block;
 }
 
-.page-cart .ems-page-order-payment .ems-cart-pay-type .ems-pay-other, .ems-message,
+.page-cart .ems-page-order-payment .ems-cart-pay-type .ems-pay-other,
+.ems-message,
 .page-member .ems-page-member-order-detail .order-detail-info-payment > div > div {
-    &:empty {
-        display: none !important;
-    }
+    
+    &:empty {display: none !important;}
+
 }
 
 /*@media screen and (max-width: $breakpointSM) {
