--- a/include/member.scss
+++ b/include/member.scss
@@ -76,8 +76,6 @@
 
     .page-top-title {text-align: left;}
 
-    .page-top-desc {display: none;}
-
     .ems-address-form {display: flex; flex-direction: column-reverse;}
 
     .add-new-address {margin-bottom: 10px;
@@ -124,7 +122,7 @@ body:not(.new-address) {
 
     .page-member {
 
-        .row-1 {display: block;} 
+        .row-1 {display: block;}
     
     }
 
@@ -142,7 +140,7 @@ body:not(.new-address) {
 
             i {font-size: 20px; margin-right: 10px;}
 
-            .addrsClose {display: flex; align-items: center;}
+            span {display: flex; align-items: center;}
 
         }
     
@@ -189,6 +187,8 @@ body:not(.new-address) {
         .tcCheck {display: none;}
 
     }
+
+    .pageErrorAdresListe {text-align: center; margin: 20px 0px; font-size: 14px;}
 
 }
 
