--- a/include/member.scss
+++ b/include/member.scss
@@ -443,3 +443,163 @@ body:not(.new-address) {
     }
 
 }
+
+@media screen and (max-width: 960px) {
+
+    .page-member {padding-top: 20px; padding-bottom: 0px;
+
+        .row-1 {width: 100%;}
+
+        .row-2 {width: 100%; margin-top: 25px;}
+
+        .member-menu.dropdown {display: none;}
+
+        .member-menu-selecbox {display: block; font-weight: bold;}
+
+        #validateUye {max-width: 100%; padding-left: 0px;}
+
+    }
+
+    .order-detail-info {margin-bottom: 50px;
+
+        > div {flex-grow: 1; line-height: 2.2;}
+
+    }
+
+    .order-address-delivery-wrapper {flex-wrap: wrap;
+    
+        > div {border: none; padding: 0px; width: 100%;
+
+            .text {margin: 15px 0px;}
+    
+            .value {border: 1px solid $color-4; padding: 34px 20px;}
+        
+        }
+    
+    }
+
+    .ems-grid-order-products,
+    .ems-grid-favorites,
+    .ems-grid-follow-price,
+    .ems-grid-message {display: flex; flex-wrap: wrap; 
+
+        > div {width: calc(50% - 1px); display: flex $i; flex-wrap: wrap; flex-direction: column; margin-bottom: 50px;
+        
+            > div {display: flex; align-items: center; width: 100% $i; text-align: left $i; padding: 10px $i; box-sizing: border-box; min-height: 60px; flex: 1;}
+        
+            .ems-grid-img {height: 120px;}
+
+            &:last-child,
+            &:nth-last-child(2) {margin-bottom: 0px;}
+        
+        }
+
+        .ems-grid-header {
+
+            > div {border-width: 1px 0px 0px 1px; border-style: solid; border-color: $color-4;
+            
+                &:last-child {border-bottom-width: 1px;}
+            
+            }
+
+        }
+
+        .ems-grid-row {
+
+            &:last-child > div {border-bottom-width: 0px;}
+
+            > div {border-width: 1px 1px 0px 0px;
+            
+                &:last-child {border-bottom-width: 1px;}
+            
+            }
+
+        }
+
+    }
+
+    .ems-grid-favorites {
+
+        .ems-grid-header,
+        .ems-grid-row {margin-bottom: 50px;}
+
+    }
+
+    .order-detail-info-payment {width: 100%; padding: 0px; border: none; margin-top: 20px;
+    
+        > div > div {line-height: 2;
+
+            &:last-child {text-align: right;}
+
+        }
+    
+    }
+
+    .ems-page-member-order-detail {
+
+        .bottom-step {width: 100%; margin-top: 50px; justify-content: center;}
+
+    }
+
+    .ems-grid-default {
+
+        > div {
+
+            .ems-grid-price {direction: ltr;}
+
+        }
+
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+
+    .ems-page-member-order {
+
+        .ems-grid-order {display: flex; flex-wrap: wrap;
+        
+            .ems-grid-header,
+            .ems-grid-row {width: calc(50% - 1px); display: flex $i; flex-wrap: wrap; margin-bottom: 45px;
+            
+                > div {display: flex; width: 100%; height: 60px; align-items: center; box-sizing: border-box;
+                    
+                    &:last-child {border-bottom-width: 1px;}
+                
+                }
+            
+            }
+
+            .ems-grid-header {
+
+                > div {border-width: 1px 0px 0px 1px; border-style: solid; border-color: $color-4; padding: 15px 12px; font-size: 15px;}
+
+            }
+
+            .ems-grid-row {
+
+                &:last-child {
+
+                    > div {border-bottom-width: 0px;
+                    
+                        &:last-child {border-bottom-width: 1px;}
+                    
+                    }
+
+                }
+
+            }
+        
+        }
+
+        .order-filter {flex-wrap: wrap;
+
+            .sStylerWrp_select {width: 100%; margin-right: 0px; margin-bottom: 30px;}
+
+            .btnSipAra {width: 100%;}
+
+        }
+
+    }
+
+}
