--- a/include/footer.scss
+++ b/include/footer.scss
@@ -16,7 +16,7 @@
 
     .logo {width: 360px;
     
-        small {font-size: 17px; font-weight: 600; color: $color-8; max-width: 80px; padding-left: 15px; margin-bottom: 5px; align-self: flex-end; line-height: 1.2;}
+        small {font-size: 17px; color: $color-8; padding-left: 9px; margin-bottom: 22px; align-self: flex-end; line-height: 1.2;}
     
     }
 
