--- a/include/member.scss
+++ b/include/member.scss
@@ -551,6 +551,8 @@ body:not(.new-address) {
 
     }
 
+    .ems-page-member-password {max-width: 100%;}
+
 }
 
 @media screen and (max-width: 768px) {
