--- a/include/product-detail.scss
+++ b/include/product-detail.scss
@@ -412,6 +412,12 @@
 
     }
 
+    .content-js .popupTaksit .gridTaksitBanka > tbody {flex-wrap: wrap;
+
+        > tr {width: 100%;}
+
+    }
+
 }
 
 @media screen and (max-width: 768px) {
