--- a/include/content.scss
+++ b/include/content.scss
@@ -41,3 +41,51 @@
     iframe {width: 100%; height: 475px; margin-top: 35px;}
 
 }
+
+// error
+
+.errorHolder .text-content-wrp {height: 100vh;
+
+    > span {font-size: 40px; font-weight: bold; padding: 50px 0px;}
+
+    > a {text-transform: uppercase;
+
+        @extend .large;
+
+    }
+
+}
+
+
+@media screen and (max-width: 960px) {
+
+    .ems-content-page {padding-top: 30px; padding-bottom: 30px;
+
+        .kutuSolMenuTree {
+
+            .sStylerMainWrp {display: block;}
+
+            .kutuBodySolMenuTree {display: none;}
+
+        }
+
+    }
+
+    .ems-sidebar {width: 100%; margin-bottom: 20px;}
+
+    .ems-content {width: 100%;
+    
+        a {font-size: 15px; padding-left: 20px; padding-right: 20px; width: 100%; box-sizing: border-box;}
+    
+    }
+
+    // error
+
+    .errorHolder .text-content-wrp {height: 100vh;
+
+        > span {font-size: 16px;}
+
+    }
+
+
+}
